<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/shape_msg_item"
        android:layout_centerInParent="true"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/park_blue"
            android:textSize="@dimen/texttitle_size"
            android:text="贵AQ2412"
            android:id="@+id/vip_text"
            android:layout_marginTop="10dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_msgtime"
            android:textSize="@dimen/text_size"
            android:text="@string/text_dialog_vip1"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_msgtime"
            android:textSize="@dimen/text_size"
            android:text="@string/text_dialog_vip2"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/vip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/theme_button_vip"
            android:text="@string/text_dialog_vip_com"
            android:textColor="@color/white"
            android:textSize="@dimen/texttitle_size"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />


    </LinearLayout>

</RelativeLayout>