<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_msg_item"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_msg_item"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/choose_carType"
            android:textColor="@color/text_msgtime"
            android:textSize="@dimen/text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/pop_choose_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@drawable/shape_choose_on"
                android:text="@string/carType_small" />

            <Button
                android:id="@+id/pop_choose_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_choose"
                android:text="@string/carType_big" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/choose_carNumType"
            android:textColor="@color/text_msgtime"
            android:textSize="@dimen/text_size" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_carType_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/carType_new"
                android:textColor="@color/text_msgtime"
                android:textSize="@dimen/text_size" />

            <com.suke.widget.SwitchButton
                android:id="@+id/btn_catType_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:sb_background="#A7A7A7"
                app:sb_checked_color="@color/text_red"
                app:sb_show_indicator="false" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_carType_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/carType_stu"
                android:textColor="@color/text_msgtime"
                android:textSize="@dimen/text_size" />

            <com.suke.widget.SwitchButton
                android:id="@+id/btn_catType_stu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:sb_background="#A7A7A7"
                app:sb_checked_color="@color/text_red"
                app:sb_show_indicator="false" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/carNum"
                android:textColor="@color/text_msgtime"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_key1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                />
            <EditText
                android:id="@+id/edit_key2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                android:layout_marginLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_key3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                android:layout_marginLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_key4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                android:layout_marginLeft="10dp"
                />
            <EditText
                android:id="@+id/edit_key5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/edit_key6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_edit"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                />




            <TextView
                android:id="@+id/text_stucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="学"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/text_bigSize"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/camera_1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/paizhao"
                    />

                <TextView
                    android:id="@+id/text_camera1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/camera_1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/camera"
                    android:textColor="@color/text_msgtime"
                    android:textSize="@dimen/text_smallSize" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/camera_2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/paizhao" />

                <TextView
                    android:id="@+id/text_camera2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/camera_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/camera"
                    android:textColor="@color/text_msgtime"
                    android:textSize="@dimen/text_smallSize" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/pop1_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/theme_button_exit"
                    android:text="@string/exit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/texttitle_size" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/pop1_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/theme_button_next"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="@dimen/texttitle_size" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>